--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -3,7 +3,7 @@
 }
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-image: linear-gradient(to right, #333, #CCC, #FFF);
+    background-color: linear-gradient(to right, #3333, #CCC, #FFF);;
     padding: 0;
     margin: 0;
 }
@@ -17,8 +17,8 @@ body {
 h1 {
     font-size: /*36px*/ 1.4rem;
     margin: 0;
-    font-family:'Times New Roman', Times, serif;
-    /*text-align: center;
+    /*font-family:'Times New Roman', Times, serif;
+    text-align: center;
     color: #38bdf8;*/
 }
 
